<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_background"
    android:orientation="vertical"
    android:padding="@dimen/margin_16_dp">

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="@dimen/image_view"
        android:layout_height="@dimen/image_view"
        android:layout_gravity="center"
        android:contentDescription="@string/description_book_cover"
        tools:src="@drawable/sample_cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.1"
            android:maxLines="1"
            android:textColor="@color/textColorBookTitle"
            android:textSize="@dimen/title_text_size"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/textColorAuthor"
            android:textSize="@dimen/author_text_size"
            tools:text="@string/sample_author" />

        <TextView
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAllCaps="true"
            android:textColor="@color/textColorCountryCode"
            android:textSize="@dimen/language_code_text_size"
            tools:text="@string/sample_language" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/book_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/textColorPrice"
                android:textSize="@dimen/language_code_text_size"
                android:textStyle="bold"
                tools:text="@string/sample_price" />

            <TextView
                android:id="@+id/currency_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:textColor="@color/textColorPrice"
                android:textSize="@dimen/language_code_text_size"
                android:textStyle="bold"
                tools:text="@string/sample_currency" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>